Added handling for image relative paths for content cards.
Signed-off-by: Kevin Putnam <kevin.putnam@gmail.com>

--- a/blog/202107031249.rst
+++ b/blog/202107031249.rst
@@ -1,4 +1,6 @@
-It happened on the way to the forum
-####################################
+A Funny Thing Happened on the Way to the Forum
+################################################
+
+.. image:: ../_files/forum.jpg
 
 This is just a test.
